--- a/package.json
+++ b/package.json
@@ -10,15 +10,19 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.9",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.27",
     "solid-devtools": "^0.27.3",
     "tailwindcss": "^3.3.3",
     "typescript": "^5.1.3",
     "vite": "^4.3.9",
-    "vite-plugin-solid": "^2.7.0"
+    "vite-plugin-solid": "^2.7.0",
+    "vite-plugin-solid-svg": "^0.6.4",
+    "vite-tsconfig-paths": "^4.2.0"
   },
   "dependencies": {
+    "@solidjs/router": "^0.8.2",
     "solid-js": "^1.7.6"
   }
 }
